--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
+    "highlight.js": "^11.9.0",
     "marked": "^12.0.2",
+    "marked-highlight": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@types/highlight.js": "^10.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^9.0.8",
